2. Se agrego una seccion con informacion personal

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
         </div>
 
     </section>
+    <section class="container">
+      <h2 class="display-4 text-center my-4">Sobre mi</h2>
+      <article class="shadow-lg p-3 mb-5 bg-white rounded">
+        <h3 class="text-secondary">Información personal</h3>
+        <hr>
+        <p> <strong>Edad:</strong>  28 años</p>
+        <p> <strong>Email:</strong>  javier.salas.991@gmail.com</p>
+        <p> <strong>Telefono:</strong>  (0381)153852378</p>
+        <p> <strong>Dirección:</strong>  Lamadrid 185, Yerba Buena, Tucumán</p>
+        <hr>
+        <h3 class="text-secondary">Mi historia</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius perferendis tenetur dolorum et quisquam, totam iste ratione, quam nobis provident architecto. Eum quidem quaerat quibusdam magnam quo nihil deserunt nisi illo mollitia consequuntur et suscipit ea illum sit, provident perspiciatis aliquam vero commodi minima ut? Ratione, sequi aspernatur earum facere molestias expedita laborum corrupti, minus fuga deleniti maxime ex perspiciatis non assumenda eaque dolore autem, velit rerum eveniet? Sint esse necessitatibus accusamus expedita non quis. Quasi qui asperiores nobis excepturi voluptatibus fuga quibusdam eius. Molestiae nulla eveniet ad officia, totam voluptate, sapiente aperiam blanditiis suscipit consequatur temporibus, illo placeat quibusdam esse modi mollitia dolor cum! Tenetur quam, dignissimos ea illum cumque iure ad! Nesciunt.</p>
+
+      </article>
+
+    </section>
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
             <i class="fab fa-linkedin-in fa-2x mx-1"></i>
