--- a/index.html
+++ b/index.html
@@ -184,6 +184,32 @@
             </div>
           </div>
         </article>
+        <h2 class="display-4 text-center my-4" id="habilidades">Habilidades</h2>
+        <article>
+          <div class="row">
+            <div class="col-sm-12 col-sm-6">
+              <h3>Front-end</h3>
+              <hr>
+              <p>HTML</p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 40%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <hr>
+              <p>CSS</p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 30%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <hr>
+              <p>JavaScript</p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-sm-6">
+
+            </div>
+          </div>
+        </article>
     </section>
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
