--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                   <a class="nav-link" href="#educacion">Educación</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="#habilidades">Habilidades</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contacto</a>
@@ -230,7 +233,13 @@
             </div>
           </div>
         </article>
+        <h2 class="display-4 text-center my-4" id="portfolio">Portfolio</h2>
+        <article class="shadow-lg p-3 mb-5 bg-white rounded">
+          <p class="text-center">agregar aqui galeria</p>
+        </article>
     </section>
+    
+
     <footer class="bg-dark text-light py-4">
         <div class="container text-center">
             <i class="fab fa-linkedin-in fa-2x mx-1"></i>
