Se agregaron las imagenes en portfolio

--- a/index.html
+++ b/index.html
@@ -255,7 +255,17 @@
         <!-- Portfolio -->
         <h2 class="display-4 text-center my-4" id="portfolio">Portfolio</h2>
         <article class="shadow-lg p-3 mb-5 bg-white rounded">
-          <p class="text-center">agregar aqui galeria</p>
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h3 class="text-center my-3">Panaderia COCU</h3>
+              <img src="img/pantalla copleta panaderia.png" alt="panaderia" class="w-100">
+            </div>
+            <div class="col-sm-12 col-md-6">
+              <h3 class="text-center my-3">Blog de Robotica</h3>
+              <img src="img/pantalla completa robotica.png" alt="Robotica" class="w-100">
+
+            </div>
+          </div>
         </article>
     </section>
     
