Se cambio el color de fondo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- avatar -->
     <section class="colorfondo text-center text-light py-4">
         <div class="container">
-            <img src="img/cara.png" alt="avatar" class="avatar">
+            <img src="img/javier1.jpg" alt="avatar" class="avatar">
             <h3>Salas, Javier José</h3>
             <p>Software Developer</p>
 
@@ -87,8 +87,8 @@
                 <p class="card-text">Emprendimiento dedicado al alquiler de juegos inflables infantiles.</p>
                 <p> 
                   <strong>Habilidades:</strong>
-                  <span class="badge badge-primary">Atencion al publico</span>
-                  <span class="badge badge-primary">Logistica</span>
+                  <span class="badge badge-warning">Atencion al publico</span>
+                  <span class="badge badge-warning">Logistica</span>
                 </p>
               </div>
             </div>
@@ -107,9 +107,9 @@
                 <p class="card-text">Bar de club de futbol A.D.P.U.T.</p>
                 <p> 
                   <strong>Habilidades:</strong>
-                  <span class="badge badge-primary">Liderazgo</span>
-                  <span class="badge badge-primary">Atencion al publico</span>
-                  <span class="badge badge-primary">Organizacion</span>
+                  <span class="badge badge-warning">Liderazgo</span>
+                  <span class="badge badge-warning">Atencion al publico</span>
+                  <span class="badge badge-warning">Organizacion</span>
                 </p>
               </div>
             </div>
@@ -128,8 +128,8 @@
                 <p class="card-text">Empresa dedicada a la limpieza y mantenimiento de interior de automoviles.</p>
                 <p> 
                   <strong>Habilidades:</strong>
-                  <span class="badge badge-primary">Liderazgo</span>
-                  <span class="badge badge-primary">Atencion al publico</span>
+                  <span class="badge badge-warning">Liderazgo</span>
+                  <span class="badge badge-warning">Atencion al publico</span>
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <p class="card-text">Estudio Contable.</p>
                 <p> 
                   <strong>Habilidades:</strong>
-                  <span class="badge badge-primary">Microsoft Office</span>
-                  <span class="badge badge-primary">Begerman</span>
+                  <span class="badge badge-warning">Microsoft Office</span>
+                  <span class="badge badge-warning">Begerman</span>
                 </p>
               </div>
             </div>
