--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <!-- info personal -->
         <h3 class="text-secondary">Información personal</h3>
         <hr>
-        <p> <strong>Edad:</strong>  28 años</p>
+        <p> <strong>Edad:</strong>  29 años</p>
         <p> <strong>Email:</strong>  javier.salas.991@gmail.com</p>
         <p> <strong>Telefono:</strong>  (0381)153852378</p>
         <p> <strong>Dirección:</strong>  Lamadrid 185, Yerba Buena, Tucumán</p>
-        <hr>
-        <h3 class="text-secondary">Mi historia</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius perferendis tenetur dolorum et quisquam, totam iste ratione, quam nobis provident architecto. Eum quidem quaerat quibusdam magnam quo nihil deserunt nisi illo mollitia consequuntur et suscipit ea illum sit, provident perspiciatis aliquam vero commodi minima ut? Ratione, sequi aspernatur earum facere molestias expedita laborum corrupti, minus fuga deleniti maxime ex perspiciatis non assumenda eaque dolore autem, velit rerum eveniet? Sint esse necessitatibus accusamus expedita non quis. Quasi qui asperiores nobis excepturi voluptatibus fuga quibusdam eius. Molestiae nulla eveniet ad officia, totam voluptate, sapiente aperiam blanditiis suscipit consequatur temporibus, illo placeat quibusdam esse modi mollitia dolor cum! Tenetur quam, dignissimos ea illum cumque iure ad! Nesciunt.</p>
+        <!-- <hr> -->
+        <!-- <h3 class="text-secondary">Mi historia</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eius perferendis tenetur dolorum et quisquam, totam iste ratione, quam nobis provident architecto. Eum quidem quaerat quibusdam magnam quo nihil deserunt nisi illo mollitia consequuntur et suscipit ea illum sit, provident perspiciatis aliquam vero commodi minima ut? Ratione, sequi aspernatur earum facere molestias expedita laborum corrupti, minus fuga deleniti maxime ex perspiciatis non assumenda eaque dolore autem, velit rerum eveniet? Sint esse necessitatibus accusamus expedita non quis. Quasi qui asperiores nobis excepturi voluptatibus fuga quibusdam eius. Molestiae nulla eveniet ad officia, totam voluptate, sapiente aperiam blanditiis suscipit consequatur temporibus, illo placeat quibusdam esse modi mollitia dolor cum! Tenetur quam, dignissimos ea illum cumque iure ad! Nesciunt.</p> -->
 
       </article>
       <!-- experiencia Laboral -->
@@ -205,6 +205,8 @@
             </div>
           </div>
         </article>
+        <h2 class="text-center">Nivel de ingles: Intermedio avanzádo.</h2>
+        <br>
         <!-- Habilidades -->
         <h2 class="display-4 text-center my-4" id="habilidades">Habilidades</h2>
         <article class="shadow-lg p-3 mb-5 bg-white rounded">
@@ -214,22 +216,27 @@
               <hr>
               <p>HTML</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 40%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <hr>
               <p>CSS</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 30%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <hr>
               <p>Bootstrap</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <hr>
               <p>JavaScript</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <hr>
+              <p>React</p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="col-sm-12 col-md-6">
@@ -237,12 +244,12 @@
               <hr>
               <p>Node</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 5%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 15%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <hr>
               <p>Express</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               <hr>
               <p>Git</p>
