--- a/index.html
+++ b/index.html
@@ -211,47 +211,45 @@
         <h2 class="display-4 text-center my-4" id="habilidades">Habilidades</h2>
         <article class="shadow-lg p-3 mb-5 bg-white rounded">
           <div class="row">
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6  mt-4">
               <h3>Front-end</h3>
-              <hr>
               <p>HTML</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>CSS</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>Bootstrap</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>JavaScript</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>React</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 mt-4">
               <h3>Back-end</h3>
-              <hr>
               <p>Node</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 15%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>Express</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-              <hr>
+              <br>
               <p>Git</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 65%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
